--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,23 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["lib"]
+libs = ["lib", "dependencies"]
+remappings = [
+    "@openzeppelin/contracts/=dependencies/@openzeppelin-contracts-5.2.0/",
+    "account-abstraction/=dependencies/eth-infinitism-account-abstraction-0.7/",
+    "forge-std/=dependencies/forge-std-1.9.6/src",
+    "simple-account/=dependencies/erc4337-simple-account-0.0.1/",
+]
 
+[dependencies]
+forge-std = "1.9.6"
+erc4337-simple-account = { version = "0.0.1", url = "https://github.com/nikbhintade/erc4337-simple-account/archive/refs/tags/0.0.1.zip" }
+"@openzeppelin-contracts" = "5.2.0"
+eth-infinitism-account-abstraction = "0.7"
+
+[soldeer]
+remappings_generate = true
+remappings_regenerate = false
+remappings_version = false
+remappings_location = "config"
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
